# atlas-ibkr-trader

./: .gitignore  README.md  USAGE.md  _config_check.txt  _extract_configs.py  _extract_out.txt  _l1.yaml  _l2.yaml  _l4.yaml  _run_signal.py  _sig_result.txt  _signal_out.txt  _test_imports.py  _test_out.txt  analysis_standalone.py  atlas-gic-ibkr-paper-etf-margin.md  deep_amzy.txt  deep_msty.txt  deep_nvdy.txt  deep_schd.txt  err.txt  filelist.txt  generate_recommendation.py  integrated_trading_system.py  output_bnd.txt  output_income.txt  output_ivv.txt  output_jepi.txt  output_jepq.txt  output_msty.txt  output_nvdy.txt  output_qqq.txt  output_spy.txt  output_vti.txt  output_weekly.txt  pyproject.toml  result_jepq.txt  run_daily.py  scan_income.txt  scan_ivv.txt  (+7 more)
.gsd.migrating/: gsd.db-shm  gsd.db-wal
.qwen/: settings.json  settings.json.orig
.sisyphus/evidence/: task-1-help.txt  task-1-missing-module-error.txt  task-2-live-blocked.txt  task-2-paper-ok.txt  task-3-universe-ok.txt
app/: approval_gate.py  config.py  freq_bridge.py  holdings_query.py  ibkr_adapter.py  intent_translator.py  no_trade_controller.py  risk_engine.py  schemas.py  signal_orchestrator.py  test_harness.py  track_13f.py  universe.py  vibe_bridge.py
app/agents/: __init__.py  bear_researcher.py  bull_researcher.py  debate_orchestrator.py  geopolitical_agent.py  (+5 more)
docs/: NARRATIVE_CONTEXT.md  RUNBOOK.md
fixtures/: config.live.yaml  config.paper.yaml  universe.invalid.yaml  universe.valid.yaml
graphify-out/: graph.html  graph.json
tests/: test_bootstrap.py  test_config.py  test_universe.py
(+55 files in other folders)
